# SafeC

./: .clang-format  .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  CWE401_Memory_Leak__new_int_82_badB2G.html  DEPLOYMENT_READY.md  GITHUB_ACTIONS_SETUP.md  JULIET_FIXES.md  JULIET_USAGE.md  Juliet.html  LICENSE  PARSER_FIX_SUMMARY.md  PIPELINE_SETUP.md  README.md  README_SAFEC.md  RESEARCH_MOTIVATION.md  analyze_samples.sh  index.html  juliet.py  juliet_analyze.py  juliet_filtered.py  juliet_test.py  juliet_test_results.json  my_report.html  run.sh  run_quick_sample.sh  run_sample_analysis.sh  test_cast.c  test_lexer  test_lexer.cpp  test_report.html
.github/: CI_CD_PIPELINE.md  README.md  SETUP_SUMMARY.md  VISUAL_GUIDE.txt
.github/workflows/: README.md  safec-analysis.yml  safec-quick-report.yml
analysis_results/: SafeC_Analysis_Report_20251210_221011.html  SafeC_Analysis_Report_20251210_221052.html  SafeC_Analysis_Report_20251210_221052.txt
config/: README.md  format_functions.csv  memory_functions.csv  unsafe_functions.csv
docs/: CSV_CONFIGURATION.md
include/: ast.h  config_loader.h  directory_scanner.h  lexer.h  parser.h  report_generator.h  utils.h
include/detectors/: buffer_overflow_detector.h  detector_base.h  format_string_detector.h  integer_overflow_detector.h  memory_leak_detector.h  pointer_safety_detector.h  use_after_free_detector.h
latest/: report-summary.txt
src/: ast.cpp  config_loader.cpp  directory_scanner.cpp  lexer.cpp  main.cpp  parser.cpp  report_generator.cpp  utils.cpp
src/detectors/: buffer_overflow_detector.cpp  format_string_detector.cpp  integer_overflow_detector.cpp  memory_leak_detector.cpp  pointer_safety_detector.cpp  use_after_free_detector.cpp
test_samples/: buffer_overflow_examples.c  format_string_examples.c  integer_overflow_examples.c  memory_leak_examples.c  simple_test.c  use_after_free_examples.c
test_samples/working/: buffer_test.c  format_test.c  overflow_test.c  pointer_test.c
